force-app/main/default/objects/Customer_Tickets__c/Customer_Tickets__c.object-meta.xml
<CustomObject>
    <label>Customer Ticket</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Ticket ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>