force-app/main/default/objects/Customer_Tickets__c/fields/Custom_Order__c.field-meta.xml
<CustomField>
    <fullName>Custom_Order__c</fullName>
    <label>Custom Order</label>
    <referenceTo>Custom_Order__c</referenceTo>
    <relationshipName>Support_Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>