force-app/main/default/objects/Customer_Tickets__c/fields/Issue_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Issue_Related_To__c</fullName>
    <formula>TEXT(Custom_Order__r.Device__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Related To</label>
    <type>Text</type>
</CustomField>