force-app/main/default/objects/Customer_Tickets__c/fields/Request_for_Refund__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request for Refund</label>
    <type>Checkbox</type>
</CustomField>